fix document scroll -front

--- a/cli/src/app/features/documents/documents.component.html
+++ b/cli/src/app/features/documents/documents.component.html
@@ -76,7 +76,7 @@
       </div>
       
       <!-- Filters Sidebar -->
-      <div class="lg:col-span-3">
+      <div class="lg:col-span-3 lg:self-start">
         <!-- Desktop Filters -->
         <div class="hidden lg:block">
           <app-document-filters
