--- a/cli/src/app/features/documents/components/document-filters.component.css
+++ b/cli/src/app/features/documents/components/document-filters.component.css
@@ -8,3 +8,26 @@
   transition: transform 0.2s ease-in-out;
 }
 
+/* Custom scrollbar for filter sidebar */
+.custom-scrollbar {
+  scrollbar-width: thin;
+  scrollbar-color: rgb(156 163 175) transparent;
+}
+
+.custom-scrollbar::-webkit-scrollbar {
+  width: 6px;
+}
+
+.custom-scrollbar::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+.custom-scrollbar::-webkit-scrollbar-thumb {
+  background-color: rgb(156 163 175);
+  border-radius: 3px;
+}
+
+.custom-scrollbar::-webkit-scrollbar-thumb:hover {
+  background-color: rgb(107 114 128);
+}
+
